--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sua próxima viagem</title>
+  <title>Local Turístico</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <main>
+  <div id="headline-container">  
+  <section id="title-page">
+    <h3>sua próxima viagem:</h3>
+    <h1>Conheça Busan</h1>
+    </section>
+    <section id="description + image">
+    <img src="assets/image01.jpg" alt="img01">
+    <p>
+      Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.
+    </p>
+    </section>
+    <section id="content list">
+      <h3>para os amantes de história</h3>
+      <h1>Descrubra 3 destinos imperdíveis em Busan</h1>
+      <p>
+        As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos.
+        Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.
+      </p>
+    </section>
+   
+   
+ 
+</div>
+</main>
 </body>
 </html>
