--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
   <section id="title-page">
     <h3>sua próxima viagem:</h3>
     <h1>Conheça Busan</h1>
-    </section>
-    <section id="description + image">
+    <section id="description-image">
     <img src="assets/image01.jpg" alt="img01">
     <p>
-      Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.
+      Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.    
     </p>
     </section>
+    </div> 
+  
     <section id="content list">
       <h3>para os amantes de história</h3>
       <h1>Descrubra 3 destinos imperdíveis em Busan</h1>
