--- a/index.html
+++ b/index.html
@@ -10,31 +10,59 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
-  <main>
-  <div id="headline-container">  
-  <section id="title-page">
-    <h3>sua próxima viagem:</h3>
-    <h1>Conheça Busan</h1>
-    <section id="description-image">
-    <img src="assets/image01.jpg" alt="img01">
+<header>
+  <h3>Sua Próxima Viagem:</h3>
+  <h1>Conheça Busan</h1>
+</header>
+<section id="hero">
+  <img src="assets/image01.jpg" alt="Vista de Busan à noite">
+  <p>
+    Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.
+  </p>
+</section>
+<section id="destinos">
+  <h3>Para os Amantes de História</h3>
+  <h1>Descubra 3 destinos imperdíveis em Busan</h1>
+  <p>
+    As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos.
+    Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.
+  </p>
+  <div class="destino">
+    <img src="assets/image02.jpg" alt="Templo Haedong Yonggungsa">
+    <h2>1. Templo Haedong Yonggungsa</h2>
     <p>
-      Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.    
+      O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar - você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro.
     </p>
-    </section>
-    </div> 
-  
-    <section id="content list">
-      <h3>para os amantes de história</h3>
-      <h1>Descrubra 3 destinos imperdíveis em Busan</h1>
-      <p>
-        As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos.
-        Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.
-      </p>
-    </section>
-   
-   
- 
-</div>
-</main>
+    <p>
+      Bom para: <br>
+    ・História
+    </p>
+  </div>
+  <div class="destino">
+    <img src="assets/image03.jpg" alt="Templo Beomeo-sa">
+    <h2>2. Templo Beomeo-sa</h2>
+    <p>
+      Um dos maiores santuários da Coreia do Sul, localizado no alto da montanha Geumjeongsa e um exemplo da arquitetura da Dinastia Joseon.
+    </p>
+    <p>
+      Bom para: <br>
+    ・História
+    </p>
+  </div>
+  <div class="destino">
+    <img src="assets/image04.jpg" alt="Parque Yongdusan">
+    <h2>3. Parque Yongdusan</h2>
+    <p>
+      O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus - confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.
+    </p>
+    <p>
+      Bom para: <br>
+      ・Casais <br>
+      ・Famílias <br>
+      ・Orçamento
+    </p>
+  </div>
+</section>
+<footer>Feito com ❤️ pela AnaLu</footer>
 </body>
 </html>
