--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <p>
       O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar - você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro.
     </p>
-    <p>
-      Bom para: <br>
-    ・História
+    <p class="destino-info">
+    <strong>Bom para: <br>
+      ・História</strong>
     </p>
   </div>
   <div class="destino">
@@ -44,9 +44,9 @@
     <p>
       Um dos maiores santuários da Coreia do Sul, localizado no alto da montanha Geumjeongsa e um exemplo da arquitetura da Dinastia Joseon.
     </p>
-    <p>
-      Bom para: <br>
-    ・História
+    <p class="destino-info">
+      <strong>Bom para: <br>
+      ・História</strong>
     </p>
   </div>
   <div class="destino">
@@ -55,11 +55,11 @@
     <p>
       O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus - confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.
     </p>
-    <p>
-      Bom para: <br>
+    <p class="destino-info">
+     <strong>Bom para: <br>
       ・Casais <br>
       ・Famílias <br>
-      ・Orçamento
+      ・Orçamento</strong>
     </p>
   </div>
 </section>
