--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
     </p>
     <p class="destino-info">
     <strong>Bom para: <br>
-      ・História</strong>
+    <span class="cor-azul">・História</span></strong>
     </p>
   </div>
   <div class="destino">
     <img src="assets/image03.jpg" alt="Templo Beomeo-sa">
     <h2>2. Templo Beomeo-sa</h2>
     <p>
-      Um dos maiores santuários da Coreia do Sul, localizado no alto da montanha Geumjeongsa e um exemplo da arquitetura da Dinastia Joseon.
+      O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.
     </p>
     <p class="destino-info">
       <strong>Bom para: <br>
-      ・História</strong>
+     <span class="cor-azul">・História</span></strong>
     </p>
   </div>
   <div class="destino">
@@ -57,9 +57,9 @@
     </p>
     <p class="destino-info">
      <strong>Bom para: <br>
-      ・Casais <br>
-      ・Famílias <br>
-      ・Orçamento</strong>
+      <span class="cor-roxo">・Casais</span> <br>
+      <span class="cor-rosa">・Famílias</span> <br>
+      <span class="cor-laranja">・Orçamento</span></strong>
     </p>
   </div>
 </section>
