apenas um último refinamento no footer

--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@
     </p>
   </div>
 </section>
-<footer>Feito com ❤️ pela AnaLu</footer>
+<footer>Codado com atitude🤘🏼por AnaLu</footer>
 </body>
 </html>
